# RootlessJamesDSP

./: .gitignore  .gitmodules  Andrapple  BUILD_ROOT.md  README.md  build.gradle  build.gradle.kts  crowdin.yml  gradle.properties  settings.gradle
.github/: CHANGELOG_POSTFIX.md
.github/workflows/: build.yml  crowdin-contributors.yml
app/: .gitignore  build.gradle  build.gradle.kts  google-services.json  proguard-rules.pro
app/src/debug/res/mipmap-anydpi-v26/: ic_dsp_launcher.xml
app/src/debug/res/values/: debug.xml
app/src/fdroid/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/DDC/: mh750.vdc
app/src/main/assets/Liveprog/: 3bandSplitting.eel  8bandSplitting.eel  Joe0Bloggs DRX10K compander-HR.eel  autopeakfilter.eel  butterworth3Band.eel  butterworth8Band.eel  dc_remove.eel  decimate.eel  depthsurround.eel  downmixer.eel  fftConvolution2x4x2.eel  fftConvolutionHRTF.eel  firFilter.eel  firlsProc.eel  fractionalDelayline.eel  gainControl.eel  hadamVerb.eel  lowpass.eel  metallic-reverb.eel  msCentreBoost.eel  phaseshifter.eel  pitchShifter.eel  polyphaseFilterbank.eel  stereoPhaseInvert.eel  stereowide.eel  stftCentreBoost.eel  stftCentreCut.eel  stftDenoise.eel  swapChannels.eel  viper_dynamicbass.eel  viper_dynamicbass_preset.eel
app/src/main/cpp/: .gitignore  CMakeLists.txt  update_subtree.sh
app/src/main/cpp/libcrashlytics-connector/: CMakeLists.txt  Log.cpp  Log.h  crashlytics.h
app/src/main/cpp/libjamesdsp-subtree/Main/libjamesdsp/jni/jamesdsp/jdsp/Effects/: liveprogWrapper.c
app/src/main/cpp/libjamesdsp-wrapper/: CMakeLists.txt  EelVariable.cpp  EelVariable.h  EelVmVariable.cpp  EelVmVariable.h  IJavaObject.h  JArrayList.cpp  JArrayList.h  JamesDspWrapper.cpp  JamesDspWrapper.h
app/src/main/cpp/libjdspimptoolbox/: CMakeLists.txt
app/src/main/cpp/libjdspimptoolbox/libsamplerate/: src_sinc.c
app/src/main/cpp/libjdspimptoolbox/main/: JdspImpResToolbox.c  interpolation.c
app/src/main/res/anim/: slide_out.xml
app/src/main/res/color/: selector_floating_toggle_foreground_tint.xml  selector_floating_toggle_tint.xml
app/src/main/res/drawable/: ic_album_24dp.xml  ic_baseline_cone_24dp.xml  (+83 more)
app/src/plugin/: AndroidManifest.xml
app/src/preview/: google-services.json
app/src/root/: AndroidManifest.xml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: AndroidConfig.kt
codeview/: build.gradle
codeview/src/main/: AndroidManifest.xml
fastlane/: Appfile  Fastfile  NOTE.md
fastlane/metadata/android/ar/: full_description.txt  short_description.txt
fastlane/metadata/android/cs-CZ/: full_description.txt  short_description.txt
fastlane/metadata/android/de-DE/: full_description.txt  short_description.txt
fastlane/metadata/android/el-GR/: full_description.txt
fastlane/metadata/android/es-ES/: full_description.txt  short_description.txt
fastlane/metadata/android/fr-FR/: full_description.txt  short_description.txt
fastlane/metadata/android/hi-IN/: short_description.txt  title.txt
fastlane/metadata/android/id/: full_description.txt  short_description.txt
fastlane/metadata/android/it-IT/: full_description.txt  short_description.txt
fastlane/metadata/android/ja-JP/: full_description.txt  short_description.txt
fastlane/metadata/android/ko-KR/: full_description.txt  short_description.txt
fastlane/metadata/android/ms-MY/: full_description.txt
fastlane/metadata/android/nl-NL/: full_description.txt  short_description.txt
fastlane/metadata/android/pl-PL/: full_description.txt
fastlane/metadata/android/pt-BR/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/pt-PT/: full_description.txt  short_description.txt
fastlane/metadata/android/ro/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/ru-RU/: full_description.txt  short_description.txt
fastlane/metadata/android/th/: full_description.txt  short_description.txt
fastlane/metadata/android/tr-TR/: full_description.txt  short_description.txt
fastlane/metadata/android/uk/: full_description.txt  short_description.txt
fastlane/metadata/android/uk-UA/: full_description.txt  short_description.txt
fastlane/metadata/android/vi/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-CN/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-TW/: full_description.txt  short_description.txt
gradle/wrapper/: gradle-wrapper.properties
hidden-api-impl/: build.gradle  build.gradle.kts  proguard-rules.pro
hidden-api-impl/src/main/: AndroidManifest.xml
hidden-api-refined/: build.gradle  build.gradle.kts  proguard-rules.pro
hidden-api-refined/src/main/: AndroidManifest.xml
hidden-api-stubs/: build.gradle.kts
hidden-refine-api/: build.gradle
hidden-refine-api/src/main/: AndroidManifest.xml
(+517 files in other folders)
